# FastAPI-tasks

./: .gitignore  Dockerfile  README.md  database.py  main.py  pyproject.toml  repository.py  requirements.txt  router.py
